# rad-embeddings

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  WANDB_SETUP_GUIDE.md  pyproject.toml
rad_embeddings/: analyze.py  encoder.py  model.py  run_all_experiments.py  run_exps.sh  train_encoder.py  train_token_env_policy.py
rad_embeddings/scripts/: export_wandb_to_csv.py  plot.py  plot_errors.py  plot_heatmap.py  plot_learning_curve.py  plot_losses.py  plot_policy.py  plot_wandb_learning_curve.py
rad_embeddings/storage/runs/PPO_1/: events.out.tfevents.1736972161.wifi-10-42-144-50.wifi.berkeley.edu.11863.0
rad_embeddings/storage/runs/PPO_2/: events.out.tfevents.1736974344.wifi-10-42-144-50.wifi.berkeley.edu.12484.0
rad_embeddings/token_env_reach_avoid_policy/runs/PPO_1/: events.out.tfevents.1736976150.wifi-10-42-144-50.wifi.berkeley.edu.13134.0
rad_embeddings/utils/: __init__.py  config.py  dqn.py  sb3_dfa_env_features_extractor.py  sb3_token_env_features_extractor.py  utils.py
rad_embeddings/utils/sb3/: custom_dqn_policy.py  custom_ppo_policy.py  dfa_bisim_env_features_extractor.py  dfa_env_features_extractor.py  logger_callback.py  token_env_features_extractor.py  token_env_llm_features_extractor.py
